--- a/scss/_bootstrap-variables.scss
+++ b/scss/_bootstrap-variables.scss
@@ -16,6 +16,7 @@ $gray-800:                        #29363d;
 $gray-900:                        #151b1e;
 $black:                           #000 !default;
 
+$davis:                            #002C74;
 $blue:                            #20a8d8;
 $indigo:                          #6610f2 !default;
 $purple:                          #6f42c1 !default;
@@ -28,6 +29,7 @@ $teal:                            #20c997 !default;
 $cyan:                            #63c2de;
 
 $colors: (
+  davis:                          $davis,
   blue:                           $blue,
   indigo:                         $indigo,
   purple:                         $purple,
@@ -44,7 +46,7 @@ $colors: (
 );
 
 $theme-colors: (
-  primary:                        $blue,
+  primary:                        $davis,
   secondary:                      $gray-300,
   success:                        $green,
   info:                           $cyan,
